добавил связь между сущностями отель и локация
